--- a/BistroShelves/Bistro-Shelves.csproj
+++ b/BistroShelves/Bistro-Shelves.csproj
@@ -46,11 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="btrecordcounts.cs" />
     <Compile Include="EmployeeLoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="EmployeeLoginForm.Designer.cs">
       <DependentUpon>EmployeeLoginForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="History.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="History.Designer.cs">
+      <DependentUpon>History.cs</DependentUpon>
     </Compile>
     <Compile Include="FormInventoryCounts.cs">
       <SubType>Form</SubType>
@@ -58,19 +65,25 @@
     <Compile Include="FormInventoryCounts.Designer.cs">
       <DependentUpon>FormInventoryCounts.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SetParLevels.cs">
+    <Compile Include="Par.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SetParLevels.Designer.cs">
-      <DependentUpon>SetParLevels.cs</DependentUpon>
+    <Compile Include="Par.Designer.cs">
+      <DependentUpon>Par.cs</DependentUpon>
     </Compile>
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="EmployeeLoginForm.resx">
       <DependentUpon>EmployeeLoginForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="History.resx">
+      <DependentUpon>History.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormInventoryCounts.resx">
       <DependentUpon>FormInventoryCounts.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Par.resx">
+      <DependentUpon>Par.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -81,9 +94,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="SetParLevels.resx">
-      <DependentUpon>SetParLevels.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
